--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,17 @@
 {
   "C_Cpp.intelliSenseEngine": "default",
   "idf.pythonInstallPath": "/home/young/miniconda3/bin/python",
-  "idf.flashType": "UART"
+  "idf.espIdfPath": "/home/young/esp/esp-idf",
+  "idf.toolsPath": "/home/young/.espressif",
+  "idf.port": "/dev/ttyACM0",
+  "idf.customExtraVars": {
+    "IDF_TARGET": "esp32s3",
+    "OPENOCD_SCRIPTS": "/home/young/.espressif/tools/openocd-esp32/v0.12.0-esp32-20250707/openocd-esp32/share/openocd/scripts",
+    "PATH": "/home/young/.espressif/tools/openocd-esp32/v0.12.0-esp32-20250707/openocd-esp32/bin:${env:PATH}"
+  },
+  "idf.monitorPort": "/dev/ttyACM0",
+  "idf.openOcdConfigs": [
+    "board/esp32s3-builtin.cfg"
+  ],
+  "idf.flashType": "JTAG"
 }
